Resources moved to folders. Include dta file instead of loading it as json

--- a/index.html
+++ b/index.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
 <html ng-app="homepageApp">
     <head>
-        <link href='style.css' rel='stylesheet'>
-        <script src="angular.min.js"></script>
-        <script src="script.js"></script>
-        <script src="jquery-1.12.1.min.js"></script>
-        <script src="masonry.pkgd.min.js"></script>
+        <link href='css/style.css' rel='stylesheet'>
+        <script src="js/angular.min.js"></script>
+        <script src="js/script.js"></script>
+        <script src="js/jquery-1.12.1.min.js"></script>
+        <script src="js/masonry.pkgd.min.js"></script>
+        <script src="mycontent.js"></script>
 
         <script>
             var jq = jQuery.noConflict();
